<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/ee"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/med">

        </ImageView>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/tx1"
            android:textSize="20sp"

            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/cocha"
            android:textSize="20sp"

            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginRight="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"


            android:text="@string/c1"
            />
        <EditText
android:id="@+id/confircocha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/casos"
            >

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10sp"
            android:text="@string/c2"
            />
        <EditText
            android:id="@+id/sospecocha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/casos"
            >

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"

            android:text="@string/santa"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10sp"
            android:text="@string/c1"
            />
        <EditText
            android:id="@+id/confirsanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:hint="@string/casos"
            android:background="@color/colorPrimary"
            >

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10sp"
            android:text="@string/c2"
            />
        <EditText
            android:id="@+id/sospesanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:hint="@string/casos"
            android:background="@color/colorPrimary"
            >

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"

            android:text="@string/oruro"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10sp"
            android:text="@string/c1"
            />
        <EditText
            android:id="@+id/confiroru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:hint="@string/casos"
            android:background="@color/colorPrimary"
            >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/c2"
            android:textSize="20sp"
            android:layout_marginRight="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sospeoru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:background="@color/colorPrimary"
            android:hint="@string/casos">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/setconfi"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/confir">

        </EditText>

        <EditText
            android:id="@+id/setsosp"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/confir2">

        </EditText>

        <EditText
            android:id="@+id/setdepa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/oru">

        </EditText>

        <Button
            android:id="@+id/setv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn"

            >

        </Button>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">


    <EditText
        android:id="@+id/ingrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:hint="@string/usq">

    </EditText>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/uscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"

        >

    </Button>
</LinearLayout>
</LinearLayout>

